[package]
name = "twitchbot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0",  features = ["full"] }
twitch-irc = "5.0.1"
reqwest = { version = "0.12.9", features = ["json"] }
regex = "1.11.1"
serde_json = "1.0.140"
anyhow = "1.0.97"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
clap = "4.5.37"
dirs = "6.0.0"
color-art = "0.3.9"
